--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
 
     <form name="loginForm" id="login" method="post" >
         <p>
-            <label class="stepcount" for="username">Email Address</label><br>
-            <input class="stepcount" type="text" id="username" name="username" size="25" onchange="setusername()" required >
+            <label class="stepcount" for="For Phone Number">Phone Number</label><br>
+            <input class="stepcount" type="text" id="phonenumber" name="phonenumber" size="15" onchange="setphonenumber()" required >
+
         </p>
         <p>
-            <label class="stepcount" for="password">Password</span></label><br>
+            <input class="btn btn-lg btn-primary" id="loginbtn" type="button" onclick="sendtext()" value="Send Text">
+        </p>
+        <p>
+            <label class="stepcount" for="password">One Time Password</span></label><br>
             <input class="stepcount" type="password" id="password" name="pwd" size="25" onchange="setuserpassword()" required >
         </p>
-        <p>
-            <input class="btn btn-lg btn-primary" id="loginbtn" type="button" onclick="userlogin()" value="Login">
-        </p>
+        
         <p>
             <a class="stepcount" id="newusr" href="/createcustomer.html">Create account</a>
         </p>
